--- a/both/i18n/en.i18n.json
+++ b/both/i18n/en.i18n.json
@@ -2,7 +2,7 @@
   "bookTitle":"Title",
   "bookDescription": "Description",
   "bookYear": "Year",
-  "bookPagesCount":"Pages",
+  "bookPagesNumber":"Number of pages",
   "bookContent": "Content",
   "bookPrice": "Price",
   "bookImage": "Image",
