possibility create new author

--- a/both/i18n/en.i18n.json
+++ b/both/i18n/en.i18n.json
@@ -11,5 +11,7 @@
   "udk": "UDC",
   "bbk": "BBK",
 
-  "chooseAuthor": "Choose the author"
+  "chooseAuthor": "Choose the author",
+  "createNewAuthor": "Create new author",
+  "authorName": "Author's name"
 }
