Possibility to add image to publication

--- a/both/i18n/en.i18n.json
+++ b/both/i18n/en.i18n.json
@@ -10,6 +10,7 @@
   "isbn": "ISBN",
   "udc": "UDC",
   "bbk": "BBK",
+  "bookImage": "Image",
 
   "chooseAuthor": "Choose the author",
   "createNewAuthor": "Create new author",
