possibility to add pdf file to the publication

--- a/both/i18n/en.i18n.json
+++ b/both/i18n/en.i18n.json
@@ -11,6 +11,7 @@
   "udc": "UDC",
   "bbk": "BBK",
   "bookImage": "Image",
+  "bookPdf": "PDF document",
 
   "chooseAuthor": "Choose the author",
   "createNewAuthor": "Create new author",
