possibility delete publication; added new buttons, etc...

--- a/both/i18n/en.i18n.json
+++ b/both/i18n/en.i18n.json
@@ -23,5 +23,9 @@
   "pages": "Pages",
 
   "buy": "Buy",
-  "UAH": "UAH"
+  "UAH": "UAH",
+
+  "addNew": "Add new",
+  "edit": "Edit",
+  "delete": "Delete"
 }
