global helpers for pfd and image urls; changes in markup for publication view...

--- a/both/i18n/en.i18n.json
+++ b/both/i18n/en.i18n.json
@@ -11,10 +11,13 @@
   "bbk": "BBK",
   "bookImage": "Image",
   "bookPdf": "PDF document",
+  "bookExample": "Example",
 
   "chooseAuthor": "Choose the author",
   "createNewAuthor": "Create new author",
   "authorName": "Author's name",
+
+  "chooseType": "Choose a type",
 
 
   "newPublications": "New publications",
