load more button; something else...

--- a/both/i18n/en.i18n.json
+++ b/both/i18n/en.i18n.json
@@ -10,8 +10,7 @@
   "udc": "UDC",
   "bbk": "BBK",
   "bookImage": "Image",
-  "bookPdf": "PDF document",
-  "bookExample": "Example",
+  "bookPdf": "PDF example",
 
   "chooseAuthor": "Choose the author",
   "createNewAuthor": "Create new author",
