if img or pdf was changed after edit, remove old files

--- a/both/i18n/en.i18n.json
+++ b/both/i18n/en.i18n.json
@@ -11,7 +11,8 @@
   "udc": "UDC",
   "bbk": "BBK",
   "bookImage": "Cover photo",
-  "bookPdf": "PDF example",
+  "bookPdfView": "PDF example",
+  "bookPdfDownload": "direct download",
 
   "chooseAuthor": "Choose the author",
   "createNewAuthor": "Create new author",
