--- a/both/i18n/ua.i18n.json
+++ b/both/i18n/ua.i18n.json
@@ -10,7 +10,7 @@
   "udc": "УДК",
   "bbk": "ББК",
   "bookImage": "Зображення обкладинки",
-  "bookPdf": "PDF зразок книги",
+  "bookPdfView": "PDF зразок книги",
 
   "chooseAuthor": "Виберіть автора",
   "createNewAuthor": "Створити нового автора",
