better view of order list

--- a/both/i18n/en.i18n.json
+++ b/both/i18n/en.i18n.json
@@ -116,5 +116,7 @@
   "hidePublication": "Hide",
   "showPublication": "Show",
 
-  "paymentInfo": "Payment info"
+  "paymentInfo": "Payment info",
+
+  "orderBy": "Order by"
 }
