--- a/both/i18n/ua.i18n.json
+++ b/both/i18n/ua.i18n.json
@@ -114,5 +114,7 @@
   "hidePublication": "Приховати",
   "showPublication": "Показати",
 
-  "paymentInfo": "Інформація про оплату"
+  "paymentInfo": "Інформація про оплату",
+
+  "orderBy": "Замовлення від"
 }
