attacing to order waybill

--- a/both/i18n/en.i18n.json
+++ b/both/i18n/en.i18n.json
@@ -128,5 +128,10 @@
 
   "itemAddedToBucket": "Added to the bucket",
   "itemRemovedFromBucket": "Removed from the bucket",
-  "bucketCleared": "Bucket was cleared"
+  "bucketCleared": "Bucket was cleared",
+
+  "writeTtn": "Tracking number",
+  "invallidTtn": "Waybill is invalid",
+
+  "orderTtn": "Waybill"
 }
