check file size correctrly

--- a/both/i18n/en.i18n.json
+++ b/both/i18n/en.i18n.json
@@ -132,6 +132,8 @@
 
   "writeTtn": "Tracking number",
   "invallidTtn": "Waybill is invalid",
+  "success": "Success",
+  "imageUploaded": "Image uploaded",
 
   "orderTtn": "Waybill"
 }
