--- a/both/i18n/ua.i18n.json
+++ b/both/i18n/ua.i18n.json
@@ -130,6 +130,8 @@
 
   "writeTtn": "Номер ТТН відправлення",
   "invallidTtn": "Номер ТТН введено неправильно",
+  "success": "Success",
+  "imageUploaded": "Зображення завантажено успішно",
 
   "orderTtn": "ТТН"
 }
